log
vi.,  6 de oct. de 2023 19:37:10: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
56d375f
vi.,  6 de oct. de 2023 19:40:14: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|4
total_score: 15/70
c681ca5
vi.,  6 de oct. de 2023 19:44:21: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:7: error: unused variable 'submatrices' [-Werror=unused-variable]
   int submatrices[9][10] = {0};
       ^~~~~~~~~~~
sudoku.c:49:7: error: unused variable 'col_check' [-Werror=unused-variable]
   int col_check[9][10] = {0};
       ^~~~~~~~~
sudoku.c:48:7: error: unused variable 'fila_check' [-Werror=unused-variable]
   int fila_check[9][10] = {0};
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
70e04a9
vi.,  6 de oct. de 2023 19:46:39: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:52:3: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
   for(int fila = 0 ; fila < 9 ; fila++)
   ^~~
sudoku.c:62:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
     return 1;
     ^~~~~~
sudoku.c:50:7: error: unused variable 'submatrices' [-Werror=unused-variable]
   int submatrices[9][10] = {0};
       ^~~~~~~~~~~
sudoku.c:49:7: error: unused variable 'col_check' [-Werror=unused-variable]
   int col_check[9][10] = {0};
       ^~~~~~~~~
sudoku.c:48:7: error: unused variable 'fila_check' [-Werror=unused-variable]
   int fila_check[9][10] = {0};
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bf56c28
vi.,  6 de oct. de 2023 19:49:55: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:52:3: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
   for(int fila = 0 ; fila < 9 ; fila++)
   ^~~
sudoku.c:67:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
     return 1;
     ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9f16a30
vi.,  6 de oct. de 2023 19:51:36: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:52:3: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
   for(int fila = 0 ; fila < 9 ; fila++)
   ^~~
sudoku.c:71:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
     return 1;
     ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5612466
